--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 12.0.4 for binding GitHub repository
+This file was created by IntelliJ IDEA 12.0.4 for binding GitHub repository.  And was then modified by mccowan.
